Fix projects wrap

--- a/src/Styles/Sections/Projects/projects-page.scss
+++ b/src/Styles/Sections/Projects/projects-page.scss
@@ -4,9 +4,9 @@
   background-color: $accent-black;
 
   section {
+    z-index: 1;
     position: relative;
     background-color: #fff;
-    z-index: 1;
 
     &.is-overflow {
       overflow: hidden;
@@ -14,36 +14,35 @@
   }
 
   [id*='-main'] {
-    padding-top: 65px;
     height: 100vh;
+    padding-top: 65px;
   }
 
   .section-dots-wrap {
-    position: absolute;
+    z-index: -1;
     width: 340px;
     height: 340px;
-    z-index: -1;
+    position: absolute;
   }
 
   .square-info-wrap {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     width: 100%;
     height: 150px;
+    display: flex;
     max-width: 445px;
+    position: relative;
+    align-items: center;
     margin: 0 auto 20px 0;
+    flex-direction: column;
+    justify-content: center;
     border: 1px solid #12171e;
     background-color: #ffffff;
-    padding: 27px 0 35px;
 
     &:before, &:after {
+      z-index: 1;
       content: '';
       position: absolute;
       background-color: #fff;
-      z-index: 1;
     }
 
     &.project-wrap {
@@ -81,19 +80,19 @@
 
     p {
       color: #12171e;
-      font-family: $museo-300;
       font-size: 14px;
-      letter-spacing: 0.39px;
       line-height: 24px;
       word-break: break-all;
+      letter-spacing: 0.39px;
+      font-family: $museo-300;
     }
 
     a, span {
       color: inherit;
-      font-family: inherit;
       font-size: inherit;
-      letter-spacing: inherit;
+      font-family: inherit;
       line-height: inherit;
+      letter-spacing: inherit;
     }
 
     span {
@@ -102,24 +101,24 @@
   }
 
   .text-with-dot {
+    font-size: 14px;
     position: relative;
     padding-left: 20px;
+    margin-bottom: 30px;
     color: $accent-black;
     font-family: $museo-100;
-    font-size: 14px;
     letter-spacing: 0.39px;
-    margin-bottom: 30px;
 
     &:before {
-      content: '';
-      position: absolute;
-      top: 50%;
       left: 0;
+      top: 50%;
       width: 4px;
       height: 4px;
+      content: '';
+      position: absolute;
       border-radius: 100%;
-      background-color: $accent-main;
       transform: translateY(-50%);
+      background-color: $accent-main;
     }
 
     &.is-white {
@@ -153,7 +152,6 @@
 
     .square-info-wrap {
       height: 190px;
-      padding: 40px 0;
       margin: 0 auto 65px 0;
 
       &.content-wrap {
